020 ==> 268316 : OK button not disabled on empty image list, following progress dialog never finishes [patch].
021 ==> 269991 : DngConverter doesn't compile on 64bits platforms due to linking error [patch].
022 ==> 184763 : Edit Image Caption dialog - not populated with existing caption.
023 ==> 203047 : Edit Exif does not allow editing of seconds.
024 ==> 169230 : "Remove Metadata" plugin necessary.
025 ==> 208500 : XMP tags GUI incorrectly manages language.
026 ==> 178660 : Quick navigation "disabled" in list of languages (XMP).
027 ==> 242632 : The Subject classification reference code is not saved.
028 ==> 138753 : Add new menu option for Batch Copyrighting of images using IPTC.
029 ==> 198960 : Change exif date taken field of selected images.
030 ==> 270579 : Images previously selected persist in the plugin window list [patch].
031 ==> 270587 : Text fixes for the Commons export widget [patch].
032 ==> 270593 : Acquireimages fail to link on amd64.
033 ==> 270649 : Bad use of arguments for translation.
034 ==> 270624 : No display on googlemap.
035 ==> 266906 : A few widget titles should not be translatable.
036 ==> 171727 : KML export asks for overwriting tempfile.
037 ==> 271735 : HTML export of RAW images fails.
038 ==> 275857 : Word puzzle in progressbar in rajceexport.
039 ==> 215777 : Configuration to use HTTP instead of HTTPS.
040 ==> 252437 : Empty album list fixed by switching to OAuth2 authentication
041 ==> 226114 : Facebook Call Failed: Incorrect Signature.
042 ==> 276609 : KIPI facebook application is deleted. can't upload and previously uploaded pictures disappear.
043 ==> 271838 : Segfault when trying to open Geo-Location.
044 ==> 273781 : digiKam crashes when correlating images with GPX file created by Garmin GPS.
045 ==> 277480 : Export Flash dose not work.
046 ==> 226296 : FlashExport, unable to install simple viewer.
047 ==> 277661 : KIPI facebook exporter incompatible with Firefox 4 (solution: use .html extension not .php).
048 ==> 
