@@ -58,5 +58,6 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 045 ==> 277480 : Export Flash dose not work.
 046 ==> 226296 : FlashExport, unable to install simple viewer.
 047 ==> 277661 : KIPI facebook exporter incompatible with Firefox 4 (solution: use .html extension not .php).
-048 ==> 
+048 ==> 278290 : GPS Correlator is disabled (grayed) after loading gpx files.
+049 ==> 
 
